--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web baru</title>
+    <style>
+      table,
+      th,
+      td {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+    </style>
   </head>
   <body>
-    <h1>ini adalah web saya</h1>
+    <h2>BIODATA PRIBADI</h2>
+
+    <table style="width: 100%">
+      <colgroup>
+        <col span="3" />
+        <col span="2" style="background-color: pink" />
+      </colgroup>
+      <tr>
+        <th>NISN</th>
+        <th>:</th>
+        <th>576283908163</th>
+      </tr>
+
+      <tr>
+        <th>NAMA LENGKAP</th>
+        <th>:</th>
+        <th>Putri Aulya Nur Fatikha</th>
+      </tr>
+
+      <tr>
+        <th>NAMA PANGGILAN</th>
+        <th>:</th>
+        <th>Putri</th>
+      </tr>
+
+      <tr>
+        <th>KELAS</th>
+        <th>:</th>
+        <th>XI</th>
+      </tr>
+
+      <tr>
+        <th>JURUSAN</th>
+        <th>:</th>
+        <th>Rpl 4</th>
+      </tr>
+
+      <tr>
+        <th>ASAL SMP</th>
+        <th>:</th>
+        <th>SMP 3 NEGERI KEPANJEN</th>
+      </tr>
+
+      <tr>
+        <th>ALAMAT RUMAH</th>
+        <th>:</th>
+        <th>Jl.Imam Bonjol,RT01-RW02,Sembujo Sukoraharjo</th>
+      </tr>
+
+      <tr>
+        <th>HOBY</th>
+        <th>:</th>
+        <th>Membuat Kue</th>
+      </tr>
+    </table>
   </body>
 </html>
